@@ -9,10 +9,13 @@ AC_PROG_LIBTOOL
 dnl Library versions
 WCM_LIBWACOMCFG_VER="0:0:0"
 AC_SUBST(WCM_LIBWACOMCFG_VER)
+WCM_LIBWACOMXI_VER="0:0:0"
+AC_SUBST(WCM_LIBWACOMXI_VER)
 
 dnl Targets
 WCM_PROGS=""
 WCM_LIBS=""
+WCM_TCLLIBS=""
 WCM_MODULES=""
 WCM_XF86PROGS=""
 WCM_XF86MODULES=""
@@ -33,9 +36,10 @@ dnl Check for XFree86 source
 AC_WCM_CHECK_XFREE86SOURCE
 AC_WCM_CHECK_XFREE86V3SOURCE
 
-dnl Check for GTK and XLib
+dnl Check for GTK, TCL, and XLib
 AC_WCM_CHECK_GTK
 AC_WCM_CHECK_XLIB
+AC_WCM_CHECK_TCL
 
 dnl Check for ncurses
 AC_WCM_CHECK_NCURSES
@@ -129,6 +133,29 @@ if test "$enable_xsetwacom" != "no"; then
 		WCM_OPTION_XSETWACOM=yes
 		WCM_XSETWACOM_LIBS="-L$WCM_XLIBDIR/lib -lX11 -lXi"
 		WCM_PROGS="$WCM_PROGS xsetwacom"
+	fi
+fi
+
+dnl Check for libwacomxi build
+WCM_OPTION_LIBWACOMXI=no
+AC_ARG_ENABLE(libwacomxi,
+[  --enable-wacomxi  Enable building libwacomxi             default=yes],
+	, enable_libwacomxi=yes)
+if test "$enable_libwacomxi" != "no"; then
+	if test x$WCM_ENV_XLIB != xyes; then
+		echo "***"; echo "*** WARNING:";
+		echo "*** libwacomxi requires XLib environment; libwacomxi will not be built."
+		echo "***"
+	else
+		if test x$WCM_ENV_TCLLIB != xyes; then
+			echo "***"; echo "*** WARNING:";
+			echo "*** libwacomxi requires tcl environment; libwacomxi will not be built."
+			echo "***"
+		else
+			WCM_OPTION_LIBWACOMXI=yes
+			WCM_LIBWACOMXI_LIBS="-L$WCM_TCLDIR/lib -L$WCM_XLIBDIR/lib -lX11 -lXi -ltcl -ltk"
+			WCM_TCLLIBS="libwacomxi"
+		fi
 	fi
 fi
 
@@ -365,6 +392,7 @@ echo
 
 AC_SUBST(WCM_PROGS)
 AC_SUBST(WCM_LIBS)
+AC_SUBST(WCM_TCLLIBS)
 AC_SUBST(WCM_MODULES)
 AC_SUBST(WCM_XF86PROGS)
 AC_SUBST(WCM_XF86MODULES)
@@ -373,12 +401,14 @@ AC_SUBST(WCM_EXPMODULES)
 AC_SUBST(WCM_ARCH)
 AC_SUBST(WCM_MODVER)
 AC_SUBST(WCM_KERNELDIR)
+AC_SUBST(WCM_TCLDIR)
 AC_SUBST(WCM_XF86DIR)
 AC_SUBST(WCM_XF86V3DIR)
 AC_SUBST(WCM_NO_MERGE_CONSTANTS)
 AC_SUBST(WCM_LINUX_INPUT)
 AC_SUBST(WCM_XIDUMP_LIBS)
 AC_SUBST(WCM_LIBWACOMCFG_LIBS)
+AC_SUBST(WCM_LIBWACOMXI_LIBS)
 AC_SUBST(WCM_XSETWACOM_LIBS)
 
 AC_OUTPUT(Makefile src/Makefile)
@@ -392,6 +422,7 @@ echo "  module versioning - $WCM_OPTION_MODVER"
 echo "      kernel source - $WCM_ENV_KERNEL"
 echo "            XFree86 - $WCM_ENV_XF86"
 echo "               XLib - $WCM_ENV_XLIB"
+echo "             TCLLib - $WCM_ENV_TCLLIB"
 if test -n "$WCM_ENV_XF86V3"; then
 	echo "          XFree86v3 - $WCM_ENV_XF86V3"
 fi
@@ -403,6 +434,7 @@ echo "            wacom.o - $WCM_OPTION_WACOM"
 echo "            wacdump - $WCM_OPTION_WACDUMP $WCM_PATCH_WACDUMP"
 echo "             xidump - $WCM_OPTION_XIDUMP $WCM_PATCH_XIDUMP"
 echo "        libwacomcfg - $WCM_OPTION_LIBWACOMCFG"
+echo "         libwacomxi - $WCM_OPTION_LIBWACOMXI"
 echo "          xsetwacom - $WCM_OPTION_XSETWACOM"
 echo "              hid.o - $WCM_OPTION_HID $WCM_PATCH_HID"
 echo "         usbmouse.o - $WCM_OPTION_USBMOUSE"
