@@ -37,6 +37,7 @@
 #define XWACOM_PARAM_XYDEFAULT  65
 #define XWACOM_PARAM_FILEMODEL  100
 #define XWACOM_PARAM_FILEOPTION 101
+#define XWACOM_PARAM_GIMP       102
 
 
 #endif /* __XF86_XWACOM_H */
