@@ -1,3 +1,7 @@
+2003-06-03    Ping Cheng <pingc@wacom.com>
+	* Added calibration tool and made it install as default
+	* Added gimp option for calibration
+
 2003-05-15    John E. Joganic <john@joganic.com>
 
 	* Added timestamp to sample structure
